--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "bun run src/index.ts",
     "build": "tsup",
     "build:watch": "tsup --watch",
-    "deploy": "wrangler deploy",
+    "deploy": "tsup && wrangler deploy",
     "format": "prettier --write src/**/*.ts",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
